WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45013
WebKit should not accept PDFs as video.
https://bugs.webkit.org/show_bug.cgi?id=45013
Summary
WebKit should not accept PDFs as video.
Jer Noble
Reported
2010-08-31 17:59:16 PDT
<video src="some.pdf"></video> will load a PDF as a video in Safari.
Attachments
Disable PDF Components
(5.64 KB, patch)
2010-08-31 18:20 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(15.93 KB, patch)
2010-09-01 14:19 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(15.93 KB, patch)
2010-09-01 14:39 PDT
,
Jer Noble
darin
: review+
Details
Formatted Diff
Diff
Patch
(3.91 KB, patch)
2010-09-01 22:16 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Same as attachment 66331 but with no trailing whitespace
(3.88 KB, patch)
2010-09-01 22:33 PDT
,
Matthew Willis (lilmatt)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2010-08-31 17:59:42 PDT
<
rdar://problem/8090029
>
Jer Noble
Comment 2
2010-08-31 18:20:25 PDT
Created
attachment 66155
[details]
Disable PDF Components
Jer Noble
Comment 3
2010-09-01 14:19:49 PDT
Created
attachment 66271
[details]
Patch
Jer Noble
Comment 4
2010-09-01 14:25:50 PDT
This new patch was significantly different enough to warrant re-review. There was some new code in libWebKitSystemInterface to work around what I thought was a QuickTime bug. Turns out, we just need to disable the PDF components twice (as they're registered twice).
Eric Seidel (no email)
Comment 5
2010-09-01 14:31:03 PDT
Attachment 66271
[details]
did not build on mac: Build output:
http://queues.webkit.org/results/3918039
Jer Noble
Comment 6
2010-09-01 14:38:02 PDT
Whoops, initializer count mismatch. New patch coming.
Jer Noble
Comment 7
2010-09-01 14:39:26 PDT
Created
attachment 66274
[details]
Patch
Jer Noble
Comment 8
2010-09-01 15:56:13 PDT
Committed
r66622
: <
http://trac.webkit.org/changeset/66622
>
WebKit Review Bot
Comment 9
2010-09-01 19:53:22 PDT
http://trac.webkit.org/changeset/66622
might have broken SnowLeopard Intel Release (Tests)
Jer Noble
Comment 10
2010-09-01 21:44:08 PDT
Reopening to address the test failure.
Jer Noble
Comment 11
2010-09-01 22:16:01 PDT
Created
attachment 66331
[details]
Patch
Matthew Willis (lilmatt)
Comment 12
2010-09-01 22:33:09 PDT
Created
attachment 66333
[details]
Same as
attachment 66331
[details]
but with no trailing whitespace
Eric Seidel (no email)
Comment 13
2010-09-02 02:32:15 PDT
Comment on
attachment 66333
[details]
Same as
attachment 66331
[details]
but with no trailing whitespace Clearing flags on attachment: 66333 Committed
r66652
: <
http://trac.webkit.org/changeset/66652
>
Eric Seidel (no email)
Comment 14
2010-09-02 02:34:05 PDT
Hopefully that will fix things.
WebKit Review Bot
Comment 15
2010-09-02 09:39:04 PDT
http://trac.webkit.org/changeset/66652
might have broken Leopard Intel Debug (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug