2010-08-31  Jer Noble  <jer.noble@apple.com>

Reviewed by Darin Adler.

        WebKit should not accept PDFs as video.
        https://bugs.webkit.org/show_bug.cgi?id=45013

        QuickTime will accept a PDF as the source for a movie, and happily
        convert that PDF into a .mov.  WebKit should disable the eat and grip
        PDF components which allow this.

        Test: http/tests/media/pdf-served-as-pdf.html

        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::createQTMovie): Add PDF eat and grip
        components to the components which are disabled before opening a
        QTMovie.
2010-08-31  Jer Noble  <jer.noble@apple.com>

        Reviewed by Darin Adler.

        WebKit should not accept PDFs as video.
        https://bugs.webkit.org/show_bug.cgi?id=45013

        Added a new test, similar to the text-served-as-text.html test, which
        expects an error thrown when a PDF is set as the source of a <video>
        element.

        * http/tests/media/pdf-served-as-pdf-expected.txt: Added.
        * http/tests/media/pdf-served-as-pdf.html: Added.
        * http/tests/media/resources/test.pdf: Added.


Canonical link: https://commits.webkit.org/57381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66622 268f45cc-cd09-0410-ab3c-d52691b4dbfc